# langgraph-gongzhonghao

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-ocr.txt  requirements.txt
app/: __init__.py  server.py
app/agents/: __init__.py  ai_relevance.py  constants.py  content_strategy.py  hotness_scoring.py  hotspot_agents.py  normalization.py  platform_collection.py  product_insight.py  quality_control.py  report_generation.py  source_discovery.py  task_router.py  trend_analysis.py  video_channel_knowledge.py  wechat_account_discovery.py  wechat_article_writing.py  wechat_download_collection.py
app/config/: __init__.py  env.py  mvp.py
app/graphs/: __init__.py  ai_hotspot_graph.py
app/schemas/: __init__.py  (+1 more)
docs/: ai_hotspot_agent_plan.md
scripts/: check_forgerss_xiaohongshu.py  check_ollama_model.py  check_platform.py  check_wechat_download_api.py  refresh_wechat_downloads.py  render_conical_pendulum_video.py  run_forgerss_xiaohongshu.py  setup_forgerss.py  setup_remotion_node.py  start_dev_server.py  start_ollama_docker.py  start_wechat_download_api.py  textbook_pdf_search.py
skills/: local_wechat_feed.py
tests/: __init__.py  test_forgerss_xiaohongshu_api.py  test_hotness_scoring.py  test_quality_control.py  test_qwen_rewrite_client.py  test_report_formatting.py  test_server.py  test_video_channel_knowledge.py  test_wechat_account_discovery.py  test_wechat_article_writing.py  test_wechat_download_api.py  test_wechat_refresh_script.py  test_wechat_rewrite_skill.py
video-renderer/: README.md  package-lock.json  package.json  tsconfig.json
(+75 files in other folders)
